--- a/style.css.html
+++ b/style.css.html
@@ -1,100 +1,368 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KADRA records</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Open Sans', sans-serif;
-            background-color: #0d0d0d;
-            color: #f5f5f5;
-        }
-        header {
-            background: rgba(13, 13, 13, 0.85);
-            padding: 15px 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 10;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.8);
-        }
-        header h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 26px;
-            margin: 0;
-            color: #f7c74a;
-        }
-        nav a {
-            color: #f5f5f5;
-            margin-left: 20px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        nav a:hover {
-            color: #1bbfb3;
-        }
-        .hero {
-            background: url('studio-bg.jpg') no-repeat center center/cover;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
-            padding: 0 15px;
-        }
-        .hero h2 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 52px;
-            margin: 0;
-            color: #f7c74a;
-            text-shadow: 2px 2px 8px rgba(0,0,0,0.8);
-        }
-        .hero p {
-            font-size: 20px;
-            margin-top: 15px;
-            max-width: 650px;
-            color: #f5f5f5;
-            text-shadow: 1px 1px 5px rgba(0,0,0,0.7);
-        }
-        button {
-            margin-top: 25px;
-            padding: 12px 28px;
-            background-color: #1bbfb3;
-            border: none;
-            color: #0d0d0d;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            border-radius: 30px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #17a69c;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>KADRA records Studio</title>
+  <style>
+    :root{
+      --accent:#ff5252;
+      --bg:#0d0d0d;
+      --card:#1a1a1a;
+      --glass: rgba(0,0,0,0.6);
+      --white: #ffffff;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%; margin:0; font-family:"Inter", "Arial", sans-serif; background:var(--bg); color:var(--white);}
+
+    header{
+      position:fixed;
+      top:0; left:0; width:100%; height:72px;
+      display:flex; align-items:center; justify-content:space-between;
+      padding:12px 6%; z-index:1000;
+      background: linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.35));
+      backdrop-filter: blur(6px);
+      border-bottom:1px solid rgba(255,255,255,0.03);
+    }
+    .logo{
+      font-weight:700;
+      font-size:20px;
+      letter-spacing:1px;
+    }
+    nav{
+      display:flex;
+      gap:20px;
+      align-items:center;
+    }
+    nav a{
+      color:var(--white);
+      text-decoration:none;
+      font-weight:600;
+      opacity:0.95;
+      transition:opacity .18s, transform .12s;
+    }
+    nav a:hover{ opacity:1; transform:translateY(-2px); color:var(--accent) }
+
+    /* Кнопка входа */
+    #loginBtn {
+      background: var(--accent);
+      border: none;
+      padding: 8px 18px;
+      border-radius: 6px;
+      color: #fff;
+      font-weight: 700;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+    #loginBtn:hover {
+      background: #e04343;
+    }
+
+    .hero{
+      min-height: calc(100vh - 72px);
+      margin-top:72px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      position:relative;
+      padding:48px 6%;
+      text-align:center;
+      color:var(--white);
+      background-color:#000;
+      background-image: url('img/studio-bg.jpg');
+      background-size:cover;
+      background-position:center center;
+      background-repeat:no-repeat;
+    }
+    .hero::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background: linear-gradient(180deg, rgba(0,0,0,0.55) 0%, rgba(0,0,0,0.55) 40%, rgba(0,0,0,0.65) 100%);
+      z-index:0;
+    }
+    .hero-inner{
+      position:relative;
+      z-index:1;
+      max-width:1100px;
+      width:100%;
+    }
+    .hero h1{
+      font-size: clamp(28px, 5vw, 56px);
+      line-height:1.02;
+      margin:0 0 18px 0;
+      font-weight:800;
+      letter-spacing:-0.02em;
+    }
+    .hero p{
+      margin:0 auto 26px;
+      max-width:820px;
+      color: rgba(255,255,255,0.88);
+      font-size: clamp(14px, 1.6vw, 18px);
+      line-height:1.5;
+    }
+    .hero .cta{
+      display:inline-block;
+      padding:12px 28px;
+      background:var(--accent);
+      color:#fff;
+      border-radius:8px;
+      text-decoration:none;
+      font-weight:700;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.45);
+      transition:transform .14s, box-shadow .14s;
+    }
+    .hero .cta:hover{ transform:translateY(-4px); box-shadow: 0 16px 32px rgba(0,0,0,0.55) }
+
+    main{padding:60px 6% 120px}
+    .services{
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
+      gap:20px;
+      margin-top:10px;
+    }
+    .card{
+      background:var(--card);
+      padding:20px;
+      border-radius:10px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
+    }
+    .card h3{ margin:0 0 10px; color:var(--accent) }
+    .locations{
+      margin-top:30px;
+      display:flex;
+      gap:20px;
+      flex-wrap:wrap;
+    }
+    .loc{
+      background: rgba(255,255,255,0.03);
+      padding:14px 18px;
+      border-radius:8px;
+      min-width:200px;
+    }
+    footer{
+      padding:40px 6%;
+      color:rgba(255,255,255,0.7);
+      border-top:1px solid rgba(255,255,255,0.03);
+      background:transparent;
+    }
+
+    /* Модалка для входа */
+    #loginModal {
+      display: none;
+      position: fixed;
+      z-index: 2000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      backdrop-filter: blur(3px);
+      justify-content: center;
+      align-items: center;
+    }
+    #loginModal.active {
+      display: flex;
+    }
+    .modal-content {
+      background: var(--card);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.5);
+      width: 320px;
+      color: var(--white);
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+    .modal-content h2 {
+      margin: 0 0 20px;
+      font-weight: 700;
+      font-size: 24px;
+      text-align: center;
+    }
+    .modal-content input {
+      padding: 10px 14px;
+      border-radius: 8px;
+      border: none;
+      background: #111;
+      color: #fff;
+      font-size: 16px;
+      outline: none;
+    }
+    .modal-content button {
+      padding: 12px 0;
+      background: var(--accent);
+      border: none;
+      border-radius: 8px;
+      font-weight: 700;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+    .modal-content button:hover {
+      background: #e04343;
+    }
+    .modal-content .cancel-btn {
+      background: #444;
+      margin-top: 8px;
+    }
+    .modal-content .cancel-btn:hover {
+      background: #555;
+    }
+
+    /* === Адаптивность === */
+
+    @media (max-width: 1024px) {
+      header {
+        padding: 12px 4%;
+      }
+      nav {
+        gap: 15px;
+      }
+    }
+
+    @media (max-width: 720px) {
+      header {
+        padding: 10px 5%;
+        height: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      .logo {
+        font-size: 18px;
+        margin-bottom: 8px;
+        width: 100%;
+        text-align: center;
+      }
+      nav {
+        width: 100%;
+        justify-content: center;
+        gap: 12px;
+      }
+      nav a {
+        font-size: 14px;
+      }
+      #loginBtn {
+        margin-top: 8px;
+        width: 100%;
+        max-width: 200px;
+      }
+      .hero {
+        padding: 32px 5%;
+        min-height: auto;
+      }
+      .hero h1 {
+        font-size: clamp(22px, 6vw, 36px);
+      }
+      .hero p {
+        font-size: clamp(12px, 4vw, 16px);
+      }
+      main {
+        padding: 40px 5% 80px;
+      }
+      .services {
+        grid-template-columns: 1fr;
+        gap: 18px;
+      }
+      .card {
+        padding: 16px;
+      }
+      .locations {
+        flex-direction: column;
+        gap: 12px;
+      }
+      .loc {
+        min-width: auto;
+      }
+      footer {
+        padding: 24px 5%;
+        font-size: 14px;
+        text-align: center;
+      }
+    }
+
+    @media (max-width: 400px) {
+      header {
+        padding: 10px 3%;
+      }
+      .logo {
+        font-size: 16px;
+      }
+      nav a {
+        font-size: 13px;
+      }
+      #loginBtn {
+        max-width: 100%;
+      }
+      .hero h1 {
+        font-size: 24px;
+      }
+      .hero p {
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>KADRA records</h1>
-        <nav>
-            <a href="#about">О студии</a>
-            <a href="#services">Услуги</a>
-            <a href="#contacts">Контакты</a>
-        </nav>
-    </header>
 
-    <section class="hero">
-        <h2>KADRA records</h2>
-        <p>Профессиональная студия звукозаписи. Москва — Бали — Волгоград.</p>
-        <button>Записаться</button>
+  <header>
+    <div class="logo">KADRA Records Studio</div>
+    <nav>
+      <a href="#services">Услуги</a>
+      <a href="#about">О нас</a>
+      <a href="#tracks">Работы</a>
+      <a href="#contact">Контакты</a>
+    </nav>
+    <button id="loginBtn">Вход</button>
+  </header>
+
+  <section class="hero" role="region" aria-label="Главный баннер">
+    <div class="hero-inner">
+      <h1>Создаём музыку, которая говорит за вас</h1>
+      <p>Профессиональная запись, сведение, мастеринг и полное продюсирование треков — три студии: Москва · Бали · Волгоград.</p>
+      <a class="cta" href="#contact">Записаться</a>
+    </div>
+  </section>
+
+  <main>
+    <section id="services">
+      <h2 style="color:var(--accent); text-align:center; margin-bottom:18px;">Наши услуги</h2>
+      <div class="services">
+        <div class="card">
+          <h3>Запись вокала</h3>
+          <p>Чистая, плотная запись с профессиональными микрофонами и акустикой.</p>
+        </div>
+        <div class="card">
+          <h3>Сведение и мастеринг</h3>
+          <p>Коммерческий звук, адаптированный под стриминг-платформы и радио.</p>
+        </div>
+        <div class="card">
+          <h3>Продюсирование</h3>
+          <p>От идеи и демо до релиза — аранжировка, звук и сопровождение.</p>
+        </div>
+      </div>
+
+      <div style="margin-top:28px;">
+        <h3 style="color:var(--accent);">Локации студий</h3>
+        <div class="locations">
+          <div class="loc"><strong>Москва</strong><br>Центральная студия — полнофункциональный контроль-рум и вокальная кабина.</div>
+          <div class="loc"><strong>Бали</strong><br>Резиденция для творческих сессий и атмосферных записей на природе.</div>
+          <div class="loc"><strong>Волгоград</strong><br>Локальная студия для быстрой записи и работы с исполнителями региона.</div>
+        </div>
+      </div>
     </section>
-</body>
-</html>
+
+    <section id="tracks" style="margin-top:48px;">
+      <h2 style="color:var(--accent); text-align:center;">Наши работы</h2>
+      <div style="max-width:900px; margin:18px auto;">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1534488977&color=%23ff5500" 
+          style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4)"></iframe>
+      </div>
+    </section>
+
+    <section id="about" style="margin-top:40px;">
+      <h2 style="color:var(--accent); text-align:center;">О студии</h2>
+      <p style="max-width:900px; margin:10px auto 0; text-align:center; color:rgba(255,255,255,0.85)">KADRA records — это команда инженеров и продюсеров, которые знают, как превратить идею в хит. Три локации — с разной атмосферой, но с одинаковым подходом к качеству и вниманию к деталям.</p>
+    </section>
+
+    <section id="contact" style="margin-top:40px;">
