--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KADRA records Studio</title>
   <style>
     :root{
@@ -13,16 +13,22 @@
       --white: #ffffff;
     }
     *{box-sizing:border-box}
-    html,body{height:100%; margin:0; font-family:"Inter", "Arial", sans-serif; background:var(--bg); color:var(--white);}
+    html, body {
+      height:100%; margin:0; font-family:"Inter", "Arial", sans-serif; background:var(--bg); color:var(--white);
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
     
     header{
-      position:fixed;
+      position: fixed;
       top:0; left:0; width:100%; height:72px;
       display:flex; align-items:center; justify-content:space-between;
       padding:12px 6%; z-index:1000;
       background: linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.35));
       backdrop-filter: blur(6px);
       border-bottom:1px solid rgba(255,255,255,0.03);
+      /* чтобы кнопка с абсолютом была внутри */
+      position: relative;
     }
     .logo{
       font-weight:700;
@@ -40,18 +46,32 @@
       font-weight:600;
       opacity:0.95;
       transition:opacity .18s, transform .12s;
+      font-size: 16px;
     }
-    nav a:hover{ opacity:1; transform:translateY(-2px); color:var(--accent) }
+    nav a:hover{ 
+      opacity:1; 
+      transform:translateY(-2px); 
+      color:var(--accent);
+    }
 
-    /* Кнопка входа */
+    /* Кнопка входа в виде квадрата с иконкой */
     #loginBtn {
+      position: absolute;
+      top: 18px;
+      right: 6%;
+      width: 36px;
+      height: 36px;
       background: var(--accent);
       border: none;
-      padding: 8px 18px;
       border-radius: 6px;
       color: #fff;
       font-weight: 700;
+      font-size: 22px;
       cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
       transition: background-color 0.2s ease;
     }
     #loginBtn:hover {
@@ -88,7 +108,7 @@
       width:100%;
     }
     .hero h1{
-      font-size: clamp(28px, 5vw, 56px);
+      font-size: clamp(24px, 5vw, 56px);
       line-height:1.02;
       margin:0 0 18px 0;
       font-weight:800;
@@ -111,10 +131,16 @@
       font-weight:700;
       box-shadow: 0 8px 20px rgba(0,0,0,0.45);
       transition:transform .14s, box-shadow .14s;
+      font-size: 16px;
     }
-    .hero .cta:hover{ transform:translateY(-4px); box-shadow: 0 16px 32px rgba(0,0,0,0.55) }
+    .hero .cta:hover{ 
+      transform:translateY(-4px); 
+      box-shadow: 0 16px 32px rgba(0,0,0,0.55);
+    }
 
-    main{padding:60px 6% 120px}
+    main {
+      padding: 60px 6% 120px;
+    }
     .services{
       display:grid;
       grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
@@ -127,7 +153,16 @@
       border-radius:10px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.35);
     }
-    .card h3{ margin:0 0 10px; color:var(--accent) }
+    .card h3{ 
+      margin:0 0 10px; 
+      color:var(--accent);
+      font-size: 18px;
+    }
+    .card p{
+      font-size: 14px;
+      line-height: 1.4;
+      color: rgba(255,255,255,0.85);
+    }
     .locations{
       margin-top:30px;
       display:flex;
@@ -139,12 +174,15 @@
       padding:14px 18px;
       border-radius:8px;
       min-width:200px;
+      font-size: 14px;
+      color: rgba(255,255,255,0.85);
     }
     footer{
       padding:40px 6%;
       color:rgba(255,255,255,0.7);
       border-top:1px solid rgba(255,255,255,0.03);
       background:transparent;
+      font-size: 14px;
     }
 
     /* Модалка для входа */
@@ -197,6 +235,7 @@
       color: #fff;
       cursor: pointer;
       transition: background-color 0.2s ease;
+      font-size: 16px;
     }
     .modal-content button:hover {
       background: #e04343;
@@ -209,49 +248,34 @@
       background: #555;
     }
 
-    /* ===== Адаптив для мобилок ===== */
+    /* Адаптив */
     @media (max-width: 720px) {
       header {
-        padding: 12px 5%;
-        height: auto;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .logo {
-        font-size: 18px;
-        margin-bottom: 12px;
-        width: 100%;
-        text-align: center;
-        letter-spacing: 0.5px;
+        padding: 10px 5%;
       }
       nav {
-        width: 100%;
-        justify-content: center;
         gap: 12px;
-        flex-wrap: wrap;
-      }
-      nav a {
         font-size: 14px;
-        padding: 6px 10px;
       }
-      #loginBtn {
-        margin-top: 12px;
-        width: 100%;
-        max-width: 220px;
-        padding: 10px 0;
-        font-size: 16px;
-        border-radius: 8px;
-        display: block;
-        cursor: pointer;
-      }
-      .hero h1 {
-        font-size: clamp(20px, 6vw, 32px);
-        line-height: 1.2;
+      .hero {
+        padding: 32px 5%;
       }
       .hero p {
-        font-size: clamp(12px, 4vw, 16px);
-        line-height: 1.4;
-        margin-bottom: 32px;
+        font-size: 15px;
+      }
+      .hero h1 {
+        font-size: clamp(20px, 7vw, 36px);
+      }
+      .hero .cta {
+        font-size: 14px;
+        padding: 10px 20px;
+      }
+      #loginBtn {
+        width: 32px;
+        height: 32px;
+        font-size: 20px;
+        top: 14px;
+        right: 5%;
       }
     }
   </style>
@@ -266,7 +290,7 @@
       <a href="#tracks">Работы</a>
       <a href="#contact">Контакты</a>
     </nav>
-    <button id="loginBtn">Вход</button>
+    <button id="loginBtn" aria-label="Вход">&#128274;</button>
   </header>
 
   <section class="hero" role="region" aria-label="Главный баннер">
@@ -316,7 +340,9 @@
 
     <section id="about" style="margin-top:40px;">
       <h2 style="color:var(--accent); text-align:center;">О студии</h2>
-      <p style="max-width:900px; margin:10px auto 0; text-align:center; color:rgba(255,255,255,0.85)">KADRA records — это команда инженеров и продюсеров, которые знают, как превратить идею в хит. Три локации — с разной атмосферой, но с одинаковым подходом к качеству и вниманию к деталям.</p>
+      <p style="max-width:900px; margin:10px auto 0; text-align:center; color:rgba(255,255,255,0.85)">
+        KADRA records — это команда инженеров и продюсеров, которые знают, как превратить идею в хит. Три локации — с разной атмосферой, но с одинаковым подходом к качеству и вниманию к деталям.
+      </p>
     </section>
 
     <section id="contact" style="margin-top:40px;">
