--- a/index.html
+++ b/index.html
@@ -5,43 +5,64 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KADRA records Studio</title>
   <style>
-    :root{
-      --accent:#ff5252;
-      --bg:#0d0d0d;
-      --card:#1a1a1a;
-      --glass: rgba(0,0,0,0.6);
+    :root {
+      --accent: #ff5252;
+      --bg: #0d0d0d;
+      --card: #1a1a1a;
+      --glass: rgba(0, 0, 0, 0.6);
       --white: #ffffff;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%; margin:0; font-family:"Inter", "Arial", sans-serif; background:var(--bg); color:var(--white);}
-    
-    header{
-      position:fixed;
-      top:0; left:0; width:100%; height:72px;
-      display:flex; align-items:center; justify-content:space-between;
-      padding:12px 6%; z-index:1000;
-      background: linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.35));
+    * {
+      box-sizing: border-box;
+    }
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      font-family: "Inter", "Arial", sans-serif;
+      background: var(--bg);
+      color: var(--white);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 72px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 6%;
+      z-index: 1000;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.35));
       backdrop-filter: blur(6px);
-      border-bottom:1px solid rgba(255,255,255,0.03);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.03);
     }
-    .logo{
-      font-weight:700;
-      font-size:20px;
-      letter-spacing:1px;
+    .logo {
+      font-weight: 700;
+      font-size: 20px;
+      letter-spacing: 1px;
     }
-    nav{
-      display:flex;
-      gap:20px;
-      align-items:center;
+    nav {
+      display: flex;
+      gap: 20px;
+      align-items: center;
     }
-    nav a{
-      color:var(--white);
-      text-decoration:none;
-      font-weight:600;
-      opacity:0.95;
-      transition:opacity .18s, transform .12s;
+    nav a {
+      color: var(--white);
+      text-decoration: none;
+      font-weight: 600;
+      opacity: 0.95;
+      transition: opacity 0.18s, transform 0.12s;
     }
-    nav a:hover{ opacity:1; transform:translateY(-2px); color:var(--accent) }
+    nav a:hover {
+      opacity: 1;
+      transform: translateY(-2px);
+      color: var(--accent);
+    }
 
     /* Кнопка входа в хедере */
     #loginBtn {
@@ -59,10 +80,9 @@
       background: #e04343;
     }
 
-    /* Квадратная кнопка входа внизу (нефиксированная) */
-    #loginBtnBottom {
+    /* Кнопка входа в футере для мобильных */
+    #loginBtnFooter {
       display: none;
-      margin: 40px auto 20px auto;
       width: 48px;
       height: 48px;
       background: var(--accent);
@@ -71,115 +91,136 @@
       color: #fff;
       font-weight: 700;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(255,82,82,0.7);
+      box-shadow: 0 4px 12px rgba(255, 82, 82, 0.7);
       transition: background-color 0.2s ease;
       font-size: 16px;
       line-height: 48px;
       text-align: center;
       user-select: none;
-      display: block; /* показываем по умолчанию, дальше в медиа отключим */
+      margin: 0 auto;
     }
-    #loginBtnBottom:hover {
+    #loginBtnFooter:hover {
       background: #e04343;
     }
 
-    .hero{
-      min-height: calc(100vh - 72px);
-      margin-top:72px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      position:relative;
-      padding:48px 6%;
-      text-align:center;
-      color:var(--white);
-      background-color:#000;
+    .hero {
+      margin-top: 72px;
+      padding: 48px 6%;
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      text-align: center;
+      color: var(--white);
+      background-color: #000;
       background-image: url('img/studio-bg.jpg');
-      background-size:cover;
-      background-position:center center;
-      background-repeat:no-repeat;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
     }
-    .hero::after{
-      content:"";
-      position:absolute;
-      inset:0;
-      background: linear-gradient(180deg, rgba(0,0,0,0.55) 0%, rgba(0,0,0,0.55) 40%, rgba(0,0,0,0.65) 100%);
-      z-index:0;
+    .hero::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.55) 0%,
+        rgba(0, 0, 0, 0.55) 40%,
+        rgba(0, 0, 0, 0.65) 100%
+      );
+      z-index: 0;
     }
-    .hero-inner{
-      position:relative;
-      z-index:1;
-      max-width:1100px;
-      width:100%;
+    .hero-inner {
+      position: relative;
+      z-index: 1;
+      max-width: 1100px;
+      width: 100%;
     }
-    .hero h1{
+    .hero h1 {
       font-size: clamp(28px, 5vw, 56px);
-      line-height:1.02;
-      margin:0 0 18px 0;
-      font-weight:800;
-      letter-spacing:-0.02em;
+      line-height: 1.02;
+      margin: 0 0 18px 0;
+      font-weight: 800;
+      letter-spacing: -0.02em;
     }
-    .hero p{
-      margin:0 auto 26px;
-      max-width:820px;
-      color: rgba(255,255,255,0.88);
+    .hero p {
+      margin: 0 auto 26px;
+      max-width: 820px;
+      color: rgba(255, 255, 255, 0.88);
       font-size: clamp(14px, 1.6vw, 18px);
-      line-height:1.5;
+      line-height: 1.5;
     }
-    .hero .cta{
-      display:inline-block;
-      padding:12px 28px;
-      background:var(--accent);
-      color:#fff;
-      border-radius:8px;
-      text-decoration:none;
-      font-weight:700;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.45);
-      transition:transform .14s, box-shadow .14s;
+    .hero .cta {
+      display: inline-block;
+      padding: 12px 28px;
+      background: var(--accent);
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 700;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.45);
+      transition: transform 0.14s, box-shadow 0.14s;
     }
-    .hero .cta:hover{ transform:translateY(-4px); box-shadow: 0 16px 32px rgba(0,0,0,0.55) }
-
-    main{padding:60px 6% 120px}
-    .services{
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-      gap:20px;
-      margin-top:10px;
-    }
-    .card{
-      background:var(--card);
-      padding:20px;
-      border-radius:10px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
-    }
-    .card h3{ margin:0 0 10px; color:var(--accent) }
-    .locations{
-      margin-top:30px;
-      display:flex;
-      gap:20px;
-      flex-wrap:wrap;
-    }
-    .loc{
-      background: rgba(255,255,255,0.03);
-      padding:14px 18px;
-      border-radius:8px;
-      min-width:200px;
-    }
-    footer{
-      padding:40px 6%;
-      color:rgba(255,255,255,0.7);
-      border-top:1px solid rgba(255,255,255,0.03);
-      background:transparent;
+    .hero .cta:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 16px 32px rgba(0, 0, 0, 0.55);
     }
 
-    /* Модалка для входа */
+    main {
+      padding: 60px 6% 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+      flex-grow: 1;
+    }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 10px;
+    }
+    .card {
+      background: var(--card);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+    }
+    .card h3 {
+      margin: 0 0 10px;
+      color: var(--accent);
+    }
+    .locations {
+      margin-top: 30px;
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    .loc {
+      background: rgba(255, 255, 255, 0.03);
+      padding: 14px 18px;
+      border-radius: 8px;
+      min-width: 200px;
+    }
+    footer {
+      padding: 24px 6%;
+      color: rgba(255, 255, 255, 0.7);
+      border-top: 1px solid rgba(255, 255, 255, 0.03);
+      background: var(--card);
+      text-align: center;
+      position: relative;
+      /* Не фиксируем футер, пусть идет в потоке */
+    }
+
+    /* Модалка */
     #loginModal {
       display: none;
       position: fixed;
       z-index: 2000;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
       backdrop-filter: blur(3px);
       justify-content: center;
       align-items: center;
@@ -191,7 +232,7 @@
       background: var(--card);
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.5);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.5);
       width: 320px;
       color: var(--white);
       display: flex;
@@ -234,17 +275,7 @@
       background: #555;
     }
 
-    /* Уже есть, улучшим и добавим */
-
-    @media (max-width: 1024px) {
-      header {
-        padding: 12px 4%;
-      }
-      nav {
-        gap: 15px;
-      }
-    }
-
+    /* Адаптив */
     @media (max-width: 720px) {
       header {
         padding: 10px 5%;
@@ -267,23 +298,13 @@
         font-size: 14px;
       }
       #loginBtn {
-        display: none; /* Скрываем кнопку входа в хедере на мобилках */
+        display: none; /* Скрываем кнопку в хедере */
       }
-      #loginBtnBottom {
-        display: block; /* Показываем кнопку внизу на мобилках */
-      }
-      .hero {
-        padding: 32px 5%;
-        min-height: auto;
-      }
-      .hero h1 {
-        font-size: clamp(22px, 6vw, 36px);
-      }
-      .hero p {
-        font-size: clamp(12px, 4vw, 16px);
+      #loginBtnFooter {
+        display: inline-block; /* Показываем кнопку в футере */
       }
       main {
-        padding: 40px 5% 80px;
+        padding: 40px 5% 60px;
       }
       .services {
         grid-template-columns: 1fr;
@@ -300,13 +321,12 @@
         min-width: auto;
       }
       footer {
-        padding: 24px 5%;
+        padding: 20px 5%;
         font-size: 14px;
         text-align: center;
       }
     }
 
-    /* Очень маленькие экраны */
     @media (max-width: 400px) {
       header {
         padding: 10px 3%;
@@ -316,9 +336,6 @@
       }
       nav a {
         font-size: 13px;
-      }
-      #loginBtn {
-        max-width: 100%;
       }
       .hero h1 {
         font-size: 24px;
@@ -381,28 +398,115 @@
     <section id="tracks" style="margin-top:48px;">
       <h2 style="color:var(--accent); text-align:center;">Наши работы</h2>
       <div style="max-width:900px; margin:18px auto;">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1534488977&color=%23ff5500" 
-          style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4)"></iframe>
+        <iframe
+          width="100%"
+          height="166"
+          scrolling="no"
+          frameborder="no"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1534488977&color=%23ff5500"
+          style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4)"
+        ></iframe>
       </div>
     </section>
 
     <section id="about" style="margin-top:40px;">
       <h2 style="color:var(--accent); text-align:center;">О студии</h2>
-      <p style="max-width:900px; margin:10px auto 0; text-align:center; color:rgba(255,255,255,0.85)">KADRA records — это команда инженеров и продюсеров, которые знают, как превратить идею в хит. Три локации — с разной атмосферой, но с одинаковым подходом к качеству и вниманию к деталям.</p>
+      <p
+        style="
+          max-width: 900px;
+          margin: 10px auto 0;
+          text-align: center;
+          color: rgba(255, 255, 255, 0.85);
+        "
+      >
+        KADRA records — это команда инженеров и продюсеров, которые знают, как
+        превратить идею в хит. Три локации — с разной атмосферой, но с
+        одинаковым подходом к качеству и вниманию к деталям.
+      </p>
     </section>
 
     <section id="contact" style="margin-top:40px;">
       <h2 style="color:var(--accent); text-align:center;">Контакты</h2>
       <div style="max-width:640px; margin:14px auto;">
-        <form action="mailto:hello@blackroomstudio.com" method="post" enctype="text/plain" style="display:flex;flex-direction:column;gap:10px;">
-          <input name="name" placeholder="Ваше имя" required style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;">
-          <input type="email" name="email" placeholder="Email" required style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;">
-          <textarea name="message" rows="5" placeholder="Сообщение" style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;"></textarea>
-          <button type="submit" style="padding:12px;border-radius:8px;border:none;background:var(--accent);color:#fff;font-weight:700;">Отправить</button>
+        <form
+          action="mailto:hello@blackroomstudio.com"
+          method="post"
+          enctype="text/plain"
+          style="display: flex; flex-direction: column; gap: 10px"
+        >
+          <input
+            name="name"
+            placeholder="Ваше имя"
+            required
+            style="
+              padding: 10px;
+              border-radius: 6px;
+              border: none;
+              background: #111;
+              color: #fff;
+            "
+          />
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            required
+            style="
+              padding: 10px;
+              border-radius: 6px;
+              border: none;
+              background: #111;
+              color: #fff;
+            "
+          />
+          <textarea
+            name="message"
+            rows="5"
+            placeholder="Сообщение"
+            style="
+              padding: 10px;
+              border-radius: 6px;
+              border: none;
+              background: #111;
+              color: #fff;
+            "
+          ></textarea>
+          <button
+            type="submit"
+            style="
+              padding: 12px 0;
+              border-radius: 8px;
+              border: none;
+              background: var(--accent);
+              color: #fff;
+              font-weight: 700;
+            "
+          >
+            Отправить
+          </button>
         </form>
       </div>
     </section>
+  </main>
 
-    <!-- Квадратная кнопка входа внизу, мобильная -->
-    <button id="loginBtn
+  <footer>
+    <button id="loginBtnFooter" aria-label="Вход в личный кабинет">Вход</button>
+    <p style="margin-top: 12px; font-size: 13px; opacity: 0.7;">
+      © 2025 KADRA records Studio
+    </p>
+  </footer>
+
+  <div id="loginModal" role="dialog" aria-modal="true" aria-labelledby="loginModalTitle">
+    <div class="modal-content">
+      <h2 id="loginModalTitle">Вход в личный кабинет</h2>
+      <input type="text" placeholder="Логин" />
+      <input type="password" placeholder="Пароль" />
+      <button>Войти</button>
+      <button class="cancel-btn" onclick="closeLoginModal()">Отмена</button>
+    </div>
+  </div>
+
+  <script>
+    const loginBtnHeader = document.getElementById("loginBtn");
+    const loginBtnFooter = document.getElementById("loginBtnFooter");
+    const loginModal = document.getElementById("login
