--- a/index.html
+++ b/index.html
@@ -290,16 +290,30 @@
 
     <section id="tracks" style="margin-top:48px;">
       <h2 style="color:var(--accent); text-align:center;">Наши работы</h2>
-      <div style="max-width:900px; margin:18px auto;">
-        <!-- Вставлен SoundCloud плейлист -->
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2064145701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-          style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4)">
-        </iframe>
-        <div style="font-size: 10px; color: #cccccc; line-break: anywhere; word-break: normal; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif; font-weight: 100;">
-          <a href="https://soundcloud.com/kadra-records-595003294" title="Kadra Records" target="_blank" style="color: #cccccc; text-decoration: none;">Kadra Records</a> · 
-          <a href="https://soundcloud.com/kadra-records-595003294/sets/kadra-prod-sale" title="KADRA prod. SALE" target="_blank" style="color: #cccccc; text-decoration: none;">KADRA prod. SALE</a>
+      <div style="display:flex; gap: 20px; max-width:900px; margin:18px auto; flex-wrap: wrap; justify-content: center;">
+        
+        <div style="flex: 1 1 400px; display: flex; flex-direction: column; align-items: center;">
+          <h3 style="color:var(--accent); margin-bottom: 8px;">ПЕСНИ НА ПРОДАЖУ</h3>
+          <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2064145701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true&show_tracks=10"
+            style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4); min-height:450px;">
+          </iframe>
+          <div style="font-size: 10px; color: #cccccc; margin-top: 6px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100%; text-align: center; font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif; font-weight: 100;">
+            <a href="https://soundcloud.com/kadra-records-595003294/sets/kadra-prod-sale" target="_blank" style="color: #cccccc; text-decoration: none;">KADRA prod. SALE</a>
+          </div>
         </div>
+
+        <div style="flex: 1 1 400px; display: flex; flex-direction: column; align-items: center;">
+          <h3 style="color:var(--accent); margin-bottom: 8px;">НАШИ РАБОТЫ</h3>
+          <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/595003294/tracks&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+            style="border-radius:8px; box-shadow: 0 8px 20px rgba(0,0,0,0.4); min-height:450px;">
+          </iframe>
+          <div style="font-size: 10px; color: #cccccc; margin-top: 6px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100%; text-align: center; font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif; font-weight: 100;">
+            <a href="https://soundcloud.com/kadra-records-595003294" target="_blank" style="color: #cccccc; text-decoration: none;">Kadra Records</a>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -328,15 +342,5 @@
     </div>
   </footer>
 
-  <!-- Модалка входа -->
-  <div id="loginModal">
-    <div class="modal-content">
-      <!-- Контент модалки сюда, если нужен -->
-    </div>
-  </div>
-
-  <script>
-    // Логика модалки, если будет
-  </script>
 </body>
 </html>
