--- a/index.html
+++ b/index.html
@@ -325,4 +325,42 @@
         <li>Динамические микрофоны (Shure SM7B, Sennheiser e906)</li>
         <li>Поп-фильтры и ветрозащита</li>
         <li>Аудиоинтерфейсы высокого класса (Universal Audio Apollo, RME Fireface)</li>
-        <li>Микшер
+        <li>Микшерные пульты (SSL, Yamaha)</li>
+        <li>Мониторы студийные (Genelec, Adam Audio, KRK)</li>
+        <li>Наушники контрольные (Beyerdynamic DT 770, Sennheiser HD 650)</li>
+        <li>Преамп и компрессоры (Avalon VT-737sp, Universal Audio 1176)</li>
+        <li>Акустическая обработка комнаты (панели, басовые ловушки)</li>
+        <li>DAW — программы для записи и сведения (Pro Tools, Logic Pro, Ableton Live)</li>
+        <li>MIDI-контроллеры и клавиатуры</li>
+        <li>Аналоговые синтезаторы и эффекты</li>
+        <li>Кабели и стойки профессионального уровня</li>
+      </ul>
+    </section>
+
+    <section id="about" style="margin-top:40px;">
+      <h2 style="color:var(--accent); text-align:center;">О студии</h2>
+      <p style="max-width:900px; margin:10px auto 0; text-align:center; color:rgba(255,255,255,0.85)">KADRA records — это команда инженеров и продюсеров, которые знают, как превратить идею в хит. Три локации — с разной атмосферой, но с одинаковым подходом к качеству и вниманию к деталям.</p>
+    </section>
+
+    <section id="contact" style="margin-top:40px;">
+      <h2 style="color:var(--accent); text-align:center;">Контакты</h2>
+      <div style="max-width:640px; margin:14px auto;">
+        <form action="mailto:hello@blackroomstudio.com" method="post" enctype="text/plain" style="display:flex;flex-direction:column;gap:10px;">
+          <input name="name" placeholder="Ваше имя" required style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;">
+          <input type="email" name="email" placeholder="Email" required style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;">
+          <textarea name="message" rows="5" placeholder="Сообщение" style="padding:10px;border-radius:6px;border:none;background:#111;color:#fff;"></textarea>
+          <button type="submit" style="padding:12px;border-radius:8px;border:none;background:var(--accent);color:#fff;font-weight:700;">Отправить</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div style="max-width:1200px;margin:0 auto;display:flex;justify-content:space-between;gap:20px;flex-wrap:wrap;">
+      <div>© 2025 KADRA records Studio</div>
+      <div style="opacity:0.9">Москва · Бали · Волгоград — info@blackroomstudio.com</div>
+    </div>
+  </footer>
+
+</body>
+</html>
