Update index.html последний

--- a/index.html
+++ b/index.html
@@ -317,15 +317,21 @@
       </div>
     </section>
 
-    <!-- Новый блок с оборудованием -->
-    <section id="equipment" style="margin-top:40px;">
-      <h2 style="color:var(--accent); text-align:center;">Оборудование студии</h2>
-      <ul style="max-width:900px; margin:14px auto; color: rgba(255,255,255,0.85); line-height:1.6; list-style: inside disc;">
-        <li>Конденсаторные микрофоны (Neumann U87, AKG C414)</li>
-        <li>Динамические микрофоны (Shure SM7B, Sennheiser e906)</li>
-        <li>Поп-фильтры и ветрозащита</li>
-        <li>Аудиоинтерфейсы высокого класса (Universal Audio Apollo, RME Fireface)</li>
-        <li>Микшерные пульты (SSL, Yamaha)</li>
+    <!-- Новый блок: Наши клиенты и услуги -->
+    <section id="clients" style="margin-top:40px; max-width:900px; margin-left:auto; margin-right:auto; color: rgba(255,255,255,0.85); line-height:1.6;">
+      <h2 style="color:var(--accent); text-align:center; margin-bottom:14px;">Наши клиенты и услуги</h2>
+      <p>Наши звукорежиссеры работали с такими артистами, как: <strong>Tkimali, Mekhman, Ганвест, Flexx, Каграманов, kommo, Ирина Тонева, Ирина Ортман, Юлия Самойлова (Eurovision 2019) и другие.</strong></p>
+      <p>Мы всегда рады новым клиентам и тем, кто серьёзно относится к своей музыкальной карьере.</p>
+      <p>Также занимаемся продюсерской деятельностью, дистрибуцией и продвижением артистов и песен на музыкальных площадках.</p>
+    </section>
+
+    <!-- Новый блок: Оборудование студии -->
+    <section id="equipment" style="margin-top:40px; max-width:900px; margin-left:auto; margin-right:auto;">
+      <h2 style="color:var(--accent); text-align:center; margin-bottom:14px;">Оборудование студии</h2>
+      <ul style="color: rgba(255,255,255,0.85); line-height: 1.6; list-style-position: inside;">
+        <li>Аналоговые микрофоны (Neumann U87, Shure SM7B)</li>
+        <li>Цифровые микрофоны и интерфейсы (Universal Audio Apollo, Focusrite Scarlett)</li>
+        <li>Аналоговые пульты (SSL, Yamaha)</li>
         <li>Мониторы студийные (Genelec, Adam Audio, KRK)</li>
         <li>Наушники контрольные (Beyerdynamic DT 770, Sennheiser HD 650)</li>
         <li>Преамп и компрессоры (Avalon VT-737sp, Universal Audio 1176)</li>
